# garly

backend/: .gitignore  Cargo.toml  log4rs.yml
backend/entity/: Cargo.toml
backend/entity/src/: user.rs
backend/migration/src/: lib.rs  m20230506_140209_update_timestamp_trigger.rs  m20230506_153115_user_table.rs
backend/migration/src/extension/: timestamps.rs
backend/proto/garly/v1/: user.proto
backend/src/: main.rs
backend/src/v1/: mod.rs
backend/src/v1/extention/: mod.rs  req_db.rs
backend/src/v1/layer/: logger.rs
backend/src/v1/service/: user.rs
frontend/: index.html  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
frontend/garly/: .eslintignore  .eslintrc.json  index.html  package.json  tsconfig.json  uno.config.ts  vite.config.ts
frontend/garly/locales/: nl.yml
frontend/garly/src/: App.vue  components.d.ts  main.ts
frontend/garly/src-tauri/: tauri.conf.json
frontend/garly/src/components/: Greet.vue
frontend/garly/src/layouts/: default.vue
frontend/garly/src/pages/: index.vue
frontend/garly/src/styles/: main.css
frontend/src/: App.vue  components.d.ts  vite-env.d.ts
frontend/src-tauri/: Cargo.toml
frontend/src-tauri/icons/: icon.icns
frontend/src/components/nav/: Top.vue
frontend/src/components/partial/: Dropdown.vue
frontend/src/layouts/: default.vue  none.vue
frontend/src/logic/: dark.ts
frontend/src/modules/: i18n.ts
frontend/src/pages/: uwu.vue
frontend/src/pages/user/: achievements.vue  settings.vue
frontend/src/styles/: main.css
frontend/src/types/: uncommon.ts
